Make ShowLineTreeForThis work on RootInlineBox and children-inline LayoutBlockFlow

When calling ShowLineTreeForThis() on RootInlineBox and children-
inline LayoutBlockFlow, the existing code searches for inline
structures in a wrong LayoutBlock, which is the block container of
the inline formatting context instead of the inline formatting
context itself.

This patch fixes the issue.

Bug: 821289
Change-Id: Icba7ee2b036649df5caba75050b4267188a8dbda
Reviewed-on: https://chromium-review.googlesource.com/961797
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543022}