third_party/WebKit/Source/core/layout/line/InlineBox.cpp
@@ -22,6 +22,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "core/layout/HitTestLocation.h"
 #include "core/layout/LayoutBlockFlow.h"
+#include "core/layout/api/LineLayoutAPIShim.h"
 #include "core/layout/api/LineLayoutBlockFlow.h"
 #include "core/layout/line/InlineFlowBox.h"
 #include "core/layout/line/RootInlineBox.h"
@@ -111,7 +112,13 @@ void InlineBox::ShowTreeForThis() const {
 }
 
 void InlineBox::ShowLineTreeForThis() const {
-  GetLineLayoutItem().ContainingBlock().ShowLineTreeAndMark(this, "*");
+  const LayoutBlock* containing_block =
+      LineLayoutAPIShim::LayoutObjectFrom(GetLineLayoutItem())
+          ->InclusiveContainingBlock();
+  if (containing_block) {
+    LineLayoutBox(const_cast<LayoutBlock*>(containing_block))
+        .ShowLineTreeAndMark(this, "*");
+  }
 }
 
 void InlineBox::DumpLineTreeAndMark(StringBuilder& string_builder,
